--- a/papers/retrosynthesis/references.bib
+++ b/papers/retrosynthesis/references.bib
@@ -463,4 +463,50 @@
   url    = {http://tensorflow.org/},
 }
 
+@Article{Renaissance,
+  author    = {Igor I. Baskin and David Winkler and Igor V. Tetko},
+  title     = {A renaissance of neural networks in drug discovery},
+  journal   = {Expert Opinion on Drug Discovery},
+  year      = {2016},
+  volume    = {11},
+  number    = {8},
+  pages     = {785-795},
+  note      = {PMID: 27295548},
+  doi       = {10.1080/17460441.2016.1201262},
+  publisher = {Taylor \& Francis},
+  url       = { 
+        https://doi.org/10.1080/17460441.2016.1201262
+    
+},
+}
+
+@Article{Varnek,
+  author   = {Gimadiev, Timur and Madzhidov, Timur and Tetko, Igor and Nugmanov, Ramil and Casciuc, Iury and Klimchuk, Olga and Bodrov, Andrey and Polishchuk, Pavel and Antipin, Igor and Varnek, Alexandre},
+  title    = {Bimolecular Nucleophilic Substitution Reactions: Predictive Models for Rate Constants and Molecular Reaction Pairs Analysis},
+  journal  = {Molecular Informatics},
+  year     = {2018},
+  volume   = {37},
+  number   = {0},
+  abstract = {Abstract Here, we report the data visualization, analysis and modeling for a large set of 4830 SN2 reactions the rate constant of which (logk) was measured at different experimental conditions (solvent, temperature). The reactions were encoded by one single molecular graph – Condensed Graph of Reactions, which allowed us to use conventional chemoinformatics techniques developed for individual molecules. Thus, Matched Reaction Pairs approach was suggested and used for the analyses of substituents effects on the substrates and nucleophiles reactivity. The data were visualized with the help of the Generative Topographic Mapping approach. Consensus Support Vector Regression (SVR) model for the rate constant was prepared. Unbiased estimation of the model's performance was made in cross-validation on reactions measured on unique structural transformations. The model's performance in cross-validation (RMSE=0.61 logk units) and on the external test set (RMSE=0.80) is close to the noise in data. Performances of the local models obtained for selected subsets of reactions proceeding in particular solvents or with particular type of nucleophiles were similar to that of the model built on the entire set. Finally, four different definitions of model's applicability domains for reactions were examined.},
+  doi      = {10.1002/minf.201800104},
+  eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/minf.201800104},
+  keywords = {bimolecular nucleophilic substitution reactions, Condensed Graph of Reaction, Matched Reaction Pairs, Support Vector Regression, Generative Topographic Mapping, models applicability domain},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1002/minf.201800104},
+}
+
+@Article{Kravtsov,
+  author  = {Kravtsov, A. A. and Karpov, P. V. and Baskin, I. I. and Palyulin, V. A. and Zefirov, N. S.},
+  title   = {Prediction of rate constants of SN2 reactions by the multicomponent QSPR method},
+  journal = {Doklady Chemistry},
+  year    = {2011},
+  volume  = {440},
+  number  = {2},
+  pages   = {299--301},
+  month   = {Oct},
+  issn    = {1608-3113},
+  day     = {01},
+  doi     = {10.1134/S0012500811100107},
+  url     = {https://doi.org/10.1134/S0012500811100107},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
