--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -23,8 +23,8 @@
 \author{
   Pavel Karpov\thanks{Helmholtz Zentrum M{\"u}nchen -- Research Center for Environmental Health (GmbH), Institute of Structural Biology, Ingolst{\"a}dter Landstra{\ss}e 1, D-85764 Neuherberg, Germany, \url{https://www.helmholtz-muenchen.de/stb/index.html}}\\
   Institute of Structural Biology\\
-  Helmholtz Zentrum M{\"u}nchen\\
-  BigChem GmbH \\
+  Helmholtz Zentrum M{\"u}nchen,\\
+  and BigChem GmbH, \\
   Germany, Munich \\
   \texttt{carpovpv@gmail.com} \\
    \And 
@@ -36,8 +36,8 @@
   \And
   Igor V.~Tetko \\
   Institute of Structural Biology\\
-  Helmholtz Zentrum M{\"u}nchen\\
-  BigChem GmbH \\ 
+  Helmholtz Zentrum M{\"u}nchen,\\
+  and BigChem GmbH, \\ 
   Germany, Munich \\ 
   \texttt{itetko@bigchem.de} \\
 }
